Fix positioning problem on iOS that would make the detail section transparent sometimes

--- a/src/app/components/pages/navigation/Navigation.module.css
+++ b/src/app/components/pages/navigation/Navigation.module.css
@@ -78,4 +78,8 @@
   .tripSelectorMap {
     display: inline;
   }
+
+  .detailsMap {
+    position: fixed;
+  }
 }
